# glib2

./: .gitlab-ci.yml
docs/reference/: meson.build
docs/reference/glib/: data-structures.md  glib-sections.txt.in  glib.toml.in  goption.md  markup.md  meson.build  reference-counting.md  unicode.md
docs/reference/gobject/: gobject.toml.in  meson.build  signals.md  types.md
gio/: gaction.c  gappinfo.c  gapplication.c  gapplicationcommandline.c  gasyncinitable.c  gasyncresult.c  gbufferedinputstream.c  gbufferedoutputstream.c  gbytesicon.c  gcharsetconverter.c  gconverterinputstream.c  gconverteroutputstream.c  gcredentials.c  gdatainputstream.c  gdataoutputstream.c  gdbusactiongroup.c  gdbusauthobserver.c  gdbusconnection.c  gdbusinterfaceskeleton.c  gdbusmessage.c  gdbusobjectmanagerclient.c  gdbusobjectmanagerserver.c  gdbusobjectproxy.c  gdbusobjectskeleton.c  gdbusproxy.c  gdbusserver.c  gdebugcontroller.c  gdebugcontrollerdbus.c  gdesktopappinfo.c  gdtlsclientconnection.c  gdtlsconnection.c  gdtlsserverconnection.c  gemblem.c  gemblemedicon.c  gfileenumerator.c  gfileicon.c  gfilemonitor.c  gfilterinputstream.c  gfilteroutputstream.c  ginetaddress.c  (+52 more)
glib/: gasyncqueue.c  gbookmarkfile.h  gdatetime.c  ghash.c  gkeyfile.c  glib-unix.c  glib-unix.h  gmain.c  goption.c  gpattern.c  gquark.c  gspawn.c  gstringchunk.c  gtestutils.c  gthread.c  gtimer.c  gwakeup.c
glib/tests/: unix.c
gobject/: gbinding.c  gbindinggroup.c  gboxed.c  gobject.c  gparam.c  gsignalgroup.c  gtype.c  gtypemodule.c  gtypeplugin.c  gvaluearray.c
